SFUSA/force-app/main/default/objects/MarketingPlanAdjustments__c/fields/Amount__c.field-meta.xml
<CustomField>
        <fullName>Amount__c</fullName>
        <inlineHelpText>Dollar amount of the request.</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>