SFUSA/force-app/main/default/objects/MarketingPlanAdjustments__c/fields/Brand_From__c.field-meta.xml
<CustomField>
        <fullName>Brand_From__c</fullName>
        <formula>TransferringMarketingPlan__r.Brand__r.Name</formula>
        <label>Brand From</label>
        <type>Text</type>
    </CustomField>