SFUSA/force-app/main/default/objects/MarketingPlanAdjustments__c/fields/Brand_Manager_To__c.field-meta.xml
<CustomField>
        <fullName>Brand_Manager_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand Manager To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Marketing_Plan_Adjustments_and_Transfers</relationshipName>
        <type>Lookup</type>
    </CustomField>