SFUSA/force-app/main/default/objects/MarketingPlanAdjustments__c/fields/Brand_To__c.field-meta.xml
<CustomField>
        <fullName>Brand_To__c</fullName>
        <formula>ReceivingMarketingPlan__r.Brand__r.Name</formula>
        <label>Brand To</label>
        <type>Text</type>
    </CustomField>