SFUSA/force-app/main/default/objects/MarketingPlanAdjustments__c/fields/Division_From_To__c.field-meta.xml
<CustomField>
        <fullName>Division_From_To__c</fullName>
        <description>This field stores the Division From and Division To values for the Marketing Plan Transfer</description>
        <formula>TEXT(TransferringMarketingPlan__r.Division__c)+ "-" + TEXT(ReceivingMarketingPlan__r.Division__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field stores the Division From and Division To values for the Marketing Plan Transfer</inlineHelpText>
        <label>Division From&amp;To</label>
        <type>Text</type>
    </CustomField>