SFUSA/force-app/main/default/objects/MarketingPlanAdjustments__c/fields/Receiving_Marketing_Plan_Owner_Email__c.field-meta.xml
<CustomField>
        <fullName>Receiving_Marketing_Plan_Owner_Email__c</fullName>
        <description>This email will be triggered to the Marketing Plan Owner receiving transferred funds, in the event of an approval or rejection of funds transfer.</description>
        <label>Receiving Marketing Plan Owner Email</label>
        <type>Email</type>
    </CustomField>