SFUSA/force-app/main/default/objects/MarketingPlanAdjustments__c/fields/Receiving_Territory__c.field-meta.xml
<CustomField>
        <fullName>Receiving_Territory__c</fullName>
        <formula>ReceivingMarketingPlan__r.Territory__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Receiving Territory</label>
        <type>Text</type>
    </CustomField>