SFUSA/force-app/main/default/objects/MarketingPlanAdjustments__c/fields/ReceivingMarketingPlan__c.field-meta.xml
<CustomField>
        <fullName>ReceivingMarketingPlan__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Marketing Plan receiving additional funds.</inlineHelpText>
        <label>Receiving Marketing Plan</label>
        <referenceTo>MarketingPlan__c</referenceTo>
        <relationshipLabel>Marketing Plan Transfers (Receiving Marketing Plan)</relationshipLabel>
        <relationshipName>Marketing_Plan_Adjustments2</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </CustomField>