SFUSA/force-app/main/default/objects/MarketingPlanAdjustments__c/fields/Region_To__c.field-meta.xml
<CustomField>
        <fullName>Region_To__c</fullName>
        <formula>text( ReceivingMarketingPlan__r.Region__c )</formula>
        <label>Region To</label>
        <type>Text</type>
    </CustomField>