SFUSA/force-app/main/default/objects/MarketingPlanAdjustments__c/fields/Within_Same_Brand__c.field-meta.xml
<CustomField>
        <fullName>Within_Same_Brand__c</fullName>
        <formula>if(ReceivingMarketingPlan__r.Brand__r.Name = TransferringMarketingPlan__r.Brand__r.Name, "Yes","No")</formula>
        <label>Within Same Brand?</label>
        <type>Text</type>
    </CustomField>