SFUSA/force-app/main/default/objects/MarketingPlanAdjustments__c/fields/Within_Same_Division__c.field-meta.xml
<CustomField>
        <fullName>Within_Same_Division__c</fullName>
        <description>Are the Divisions of the Transferring Marketing Plan and Receiving Marketing Plan the Same</description>
        <formula>IF(TEXT(TransferringMarketingPlan__r.Division__c ) = TEXT(ReceivingMarketingPlan__r.Division__c),"Yes","No")</formula>
        <label>Within Same Division?</label>
        <type>Text</type>
    </CustomField>