SFUSA/force-app/main/default/objects/MarketingPlanAdjustments__c/validationRules/Cannot_Transfer_Across_Country_Budgets.validationRule-meta.xml
<ValidationRule>
        <fullName>Cannot_Transfer_Across_Country_Budgets</fullName>
        <active>true</active>
        <description>You cannot request a transfer between budgets that exist within separate countries.</description>
        <errorConditionFormula>text(TransferringMarketingPlan__r.Country__c) &lt;&gt;  text(ReceivingMarketingPlan__r.Country__c)</errorConditionFormula>
        <errorMessage>You cannot request a transfer between Marketing Plan budgets that exist within separate countries.</errorMessage>
    </ValidationRule>