SFUSA/force-app/main/default/objects/MarketingPlanAdjustments__c/validationRules/CannotSubmitRequestForSameMarketingPlan.validationRule-meta.xml
<ValidationRule>
        <fullName>CannotSubmitRequestForSameMarketingPlan</fullName>
        <active>true</active>
        <description>Cannot submit request if Transferring and Receiving Marketing Plans are the same.</description>
        <errorConditionFormula>TransferringMarketingPlan__c  =  ReceivingMarketingPlan__c</errorConditionFormula>
        <errorMessage>Transferring and Receiving Marketing Plans are the same. Please change one of the fields and submit again.</errorMessage>
    </ValidationRule>