SFUSA/force-app/main/default/objects/MarketingPlanAdjustments__c/validationRules/MarketingPlanLevelCheck.validationRule-meta.xml
<ValidationRule>
        <fullName>MarketingPlanLevelCheck</fullName>
        <active>true</active>
        <description>Please make sure that Country is Australia and the Transferring and receiving Marketing Plans are at Level 6.</description>
        <errorConditionFormula>AND(
OR(
TransferringMarketingPlan__r.MP_Level__c != '6', ReceivingMarketingPlan__r.MP_Level__c !=  '6'
),
ISPICKVAL(TransferringMarketingPlan__r.Country__c,'AUS'),
ISPICKVAL(ReceivingMarketingPlan__r.Country__c,'AUS')
)</errorConditionFormula>
        <errorDisplayField>ReceivingMarketingPlan__c</errorDisplayField>
        <errorMessage>Please make sure that Country is Australia and the Transferring and receiving Marketing Plans are at Level 6.</errorMessage>
    </ValidationRule>