SFUSA/force-app/main/default/objects/MarketingPlanAdjustments__c/validationRules/RequestedCurrencyMatchTransferringMP.validationRule-meta.xml
<ValidationRule>
        <fullName>RequestedCurrencyMatchTransferringMP</fullName>
        <active>false</active>
        <description>Transferring Marketing Plan currency must match the currency on the request.</description>
        <errorConditionFormula>text( CurrencyIsoCode)  &lt;&gt;  text(TransferringMarketingPlan__r.CurrencyIsoCode)</errorConditionFormula>
        <errorDisplayField>CurrencyIsoCode</errorDisplayField>
        <errorMessage>Transferring Marketing Plan currency must match the currency on the request.</errorMessage>
    </ValidationRule>