SFUSA/force-app/main/default/objects/MarketingPlanAdjustments__c/validationRules/TransferringMPYearIsNotCurrent.validationRule-meta.xml
<ValidationRule>
        <fullName>TransferringMPYearIsNotCurrent</fullName>
        <active>true</active>
        <description>The Year of Transferring Marketing Plan or Receiving Marketing Plan is not the current year.</description>
        <errorConditionFormula>AND( 
$Profile.Name &lt;&gt; "System Administrator", 
$Profile.Name &lt;&gt; "System Administrator with Bulk Hard Delete", 
VALUE((text(TransferringMarketingPlan__r.Year__c) )) &lt; YEAR( TODAY() ))</errorConditionFormula>
        <errorMessage>Year of Transferring Marketing Plan is not the current year</errorMessage>
    </ValidationRule>